--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>LabQuant - p3</title>
+    <title>LabQuant - Project 1</title>
     <link rel="icon" type="image/x-icon" href="/static/img1.png">
 
     <!-- Bootstrap -->
@@ -45,7 +45,7 @@
               </button>-->
               <a class="navbar-brand" href="#">
 
-                LabQuant - Project 3</a>
+                LabQuant - Project 1</a>
               <!-- <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel"> -->
               <div class="offcanvas offcanvas-start text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">  
                 <div class="offcanvas-header">
